--- a/app/views/control_target/target_product_list.html.erb
+++ b/app/views/control_target/target_product_list.html.erb
@@ -4,5 +4,5 @@
             <h1>&lt<%= @user.username %>&gt's product list</h1>
         </div>
     </div>
-    <%= render 'items/items_list' %>
+    <%= render 'items/item_detail_list' %>
 </div>
