--- a/app/views/items/_item_detail_list.html.erb
+++ b/app/views/items/_item_detail_list.html.erb
@@ -1,4 +1,4 @@
-<div class='item_list'>
+<div class='item_detail_list'>
     <% unless @items.empty? %>
         <div class='row'>
             <div class='col-md-10 col-md-offset-1'>
