--- a/app/views/items/_item_list.html.erb
+++ b/app/views/items/_item_list.html.erb
@@ -1,4 +1,4 @@
-<div class='popular_list_item'>
+<div class='item_list'>
     <div class='row'>
         <% items.each_with_index do |item, index| %>
             <div class='col-md-2 text-center item_area'>
