--- a/app/views/items/index.html.erb
+++ b/app/views/items/index.html.erb
@@ -9,5 +9,5 @@
             <%= link_to "Post a new product", new_item_path, class: 'btn btn-success' %>
         </div>
     </div>
-    <%= render 'items_list' %>
+    <%= render 'item_detail_list' %>
 </div>
