--- a/app/views/layouts/_message.html.erb
+++ b/app/views/layouts/_message.html.erb
@@ -11,7 +11,7 @@
         </div>
     </div>
 <% elsif flash[:warning] %>
-    <div class='row  bg-info'>
+    <div class='row  bg-success'>
         <div class='col-md-12'>
             <h4 class='message'><%= flash[:warning] %></h4>
         </div>
