--- a/app/views/static_pages/mostpopular_items.html.erb
+++ b/app/views/static_pages/mostpopular_items.html.erb
@@ -5,7 +5,7 @@
             Top Sale
         </h1>
         <div id='top_sale_item_list'>
-            <%= render 'static_pages/popular_list_item', items: @items %>
+            <%= render 'items/item_list', items: @items %>
         </div>
         <div class='infinite-scrolling'>
             <%= paginate @items %>
