--- a/app/views/categories/show.html.erb
+++ b/app/views/categories/show.html.erb
@@ -3,7 +3,7 @@
     <div class='col-md-10 text-center'>
         <h1><%= @category.title %></h1>
         <div id='category_item_list'>
-            <%= render 'static_pages/popular_list_item', items: @items %>
+            <%= render 'items/item_list', items: @items %>
         </div>
         <div classd='infinite-scrolling'>
             <%= paginate @items %>
