--- a/app/views/items/_home_page_item_list.html.erb
+++ b/app/views/items/_home_page_item_list.html.erb
@@ -1,5 +1,5 @@
 <div class='row'>
-    <div class='col-md-12  popular_item' id= <%= name %>>
+    <div class='col-md-12  home_page_item_list' id= <%= name %>>
         <div class='row'>
             <% objects.each do |item| %>
                 <div class='col-md-2 object text-center'>
