--- a/app/views/static_pages/home.html.erb
+++ b/app/views/static_pages/home.html.erb
@@ -1,4 +1,25 @@
-<%= render 'layouts/side_bar' %>
+<div class='col-md-2 side_bar'>
+    <div class='row'>
+        <div class='col-md-12 text-center'>
+            <h4>Advertising Area</h4>
+        </div>
+    </div>
+    <div class='row'>
+        <div class='col-md-12 text-center'>
+            <h4>Advertising Area</h4>
+        </div>
+    </div>
+    <div class='row'>
+        <div class='col-md-12 text-center'>
+            <h4>Advertising Area</h4>
+        </div>
+    </div>
+    <div class='row'>
+        <div class='col-md-12 text-center'>
+            <h4>Advertising Area</h4>
+        </div>
+    </div>
+</div>
 <div class='col-md-10'>
     <div class='home_main_content'>
         <div class='row'>
@@ -38,7 +59,7 @@
         <%= render 'static_pages/list_item' %>
         
         <div id='home_category_item'>
-            <%= render 'static_pages/home_category', class_name: @categories %>
+            <%= render 'categories/home_category', class_name: @categories %>
         </div>
         <div class='infinite-scrolling'>
             <%= paginate @categories %>
