--- a/app/views/orders/_orders_list.html.erb
+++ b/app/views/orders/_orders_list.html.erb
@@ -8,7 +8,7 @@
                 <h5><%= order.order_items.count %></h5>
             </td>
             <td class='table_item_total_quantity'>
-                <h5>item_total_quantity</h5>
+                <h5><%= order.item_total_quantity %></h5>
             </td>
             <td class='table_item_total_price'>
                 <h5><%= order.item_total %></h5>
